Java 17 -> Java 11. Remove Lombok
Уменьшил версию java, потому что целевые пользователи пользуются 11 версией.